[package]
name = "brb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.17"
dirs = "5.0.1"
ratatui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
textwrap = "0.16.1"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tui-big-text = "0.6.0"
twitch-irc = "5.0.1"
