[package]
name = "brb"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/GHaxZ/brb/"
description = "Terminal be right back tool"
repository = "https://github.com/GHaxZ/brb/"

[dependencies]
clap = "4.5.17"
dirs = "5.0.1"
ratatui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
textwrap = "0.16.1"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tui-big-text = "0.6.0"
twitch-irc = "5.0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "GHaxZ/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
